<resources>
    <string name="app_name">ChatFirebase</string>
    <string name="titleRegister">Creat new account</string>
    <string name="fisrtname">Fisrt Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="comfim_password">Comfim Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
