<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/titleRegister"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtFistName"
        android:layout_below="@id/titleRegister"
        android:layout_margin="10dp"
        android:hint="@string/fisrtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtLastName"
        android:layout_below="@id/edtFistName"
        android:layout_margin="10dp"
        android:hint="@string/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_below="@id/edtLastName"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_below="@id/edtEmail"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/edtPassword1"
        android:layout_below="@id/edtPassword"
        android:layout_margin="10dp"
        android:hint="@string/comfim_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:background="@color/btnregister"
        android:textColor="@android:color/white"
        android:layout_below="@id/edtPassword1"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>