<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/titleLogin"
        android:textColor="@color/colorPrimary"
        android:text="Login with ChatFirebase"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_below="@+id/titleLogin"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_below="@+id/edtEmail"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:background="@drawable/background_accent_btn"
        android:paddingHorizontal="10dp"
        android:textColor="@android:color/white"
        android:layout_below="@id/edtPassword"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/titleRegister"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvResetPass"
        android:text="Reset password"
        android:layout_below="@id/tvRegister"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>